# upsmanager

./: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  manage.sh  pyproject.toml  requirements.apt  requirements.txt
.github/workflows/: publish.yml
nginx/: Dockerfile  nginx.conf
ups/: APCSmartConnect.py  APCSmartConnectUPS.py  BaseUPS.py  EPPC.py  Eaton.py  NextUPSSystems.py  SnmpUps.py  __init__.py  apc.py  exceptions.py  rfc.py  select.py  selectUPS.py  snmp_utils.py  ups.py
upsinfo/: admin.py  apps.py  models.py  urls.py  views.py
upsinfo/management/commands/: status.py  status_all.py  status_service.py
upsinfo/migrations/: 0001_initial.py  0002_ups_name.py  0003_event_status.py  0004_ups_fields.py  0005_ups_enabled.py
upsinfo/templates/upsinfo/: base.html  event_log.html  ups_list.html
upsinfo/tests/: tests.py
upsinfo/views/: metrics.py  web.py
upsmanager/: settings.py  urls.py  wsgi.py
